--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -19,7 +19,7 @@ html { box-sizing: border-box; }
   {% capture id %}{{ node.id | remove:'/' | downcase }}{% endcapture %}
   {% capture bg %}{% if site.colors[node.bg] %}{{ site.colors[node.bg] }}{% else %}{{ node.bg }}{% endif %}{% endcapture %}
   {% capture fg %}{% if site.colors[node.color] %}{{ site.colors[node.color] }}{% else %}{{ node.color }}{% endif %}{% endcapture %}
-  nav .p-{{id}} { border-color: {{ bg }}; }
+  /* nav .p-{{id}} { border-color: {{ bg }}; } */
   #{{id}} { background-color: {{ bg }} !important; color: {{ fg }}; }
   #{{id}} a { color: {{ fg }}; }
   #{{id}} .sectiondivider { color: {{ bg }}; }
@@ -160,8 +160,11 @@ nav ul li a:hover {
 nav ul li:hover, nav ul li.active {
   border-top-width: {{navborder_active}}px;
   padding-top: 0;
+  background-color: #f8f8f8;
 }
-
+nav ul li:hover a, nav ul li.active a{
+  color: black;
+}
 
 /* ----- sections/articles ----- */
 
@@ -170,13 +173,16 @@ nav ul li:hover, nav ul li.active {
   display:block;
   width:100%;
   min-height:300px;
-  padding:210px 0;
-  background:url(img/bgnoise.png);
+  /* padding:210px 0; */
+  padding:36px 0;
+  /* background:url(img/bgnoise.png); */
+  border-bottom: 1px solid gray;
   /* generated noise from noisetexturegenerator.com */
 }
 
 .section:first-of-type {
-    padding-top: 140px;
+    /* padding-top: 140px; */
+    padding-top: 60px;
 }
 
 
@@ -327,7 +333,10 @@ nav ul li:hover, nav ul li.active {
 	.container h4 { font-size: 18px; }
 
 
-  .section { padding:130px 0; }
+  .section {
+    /* padding:130px 0; */
+    padding:36px 0;
+  }
   .sectiondivider {
     width:200px;
     height:200px;
