--- a/_includes/css/base.css
+++ b/_includes/css/base.css
@@ -31,12 +31,16 @@
 		font-size: 100%;
 		font: inherit;
 		vertical-align: baseline; }
+	
 	article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
-		display: block; }
+		display: block;
+	}
 	body {
-		line-height: 1; }
+		line-height: 1;
+	}
 	ol, ul {
-		list-style: none; }
+		list-style: none;
+	}
 	blockquote, q {
 		quotes: none; }
 	blockquote:before, blockquote:after,
@@ -107,12 +111,16 @@
 	ul, ol { margin-bottom: 20px; }
 	ul { list-style: none outside; }
 	ol { list-style: decimal; }
-	ul, ul.square { list-style: square outside; }
+	/* mch_note list format */
+	/* ul, ul.square { list-style: square outside; }
 	ul ul, ul.circle { list-style: circle outside; }
-	ul ul ul, ul.disc { list-style: disc outside; }
+	ul ul ul, ul.disc { list-style: disc outside; } */
+	ul, ul.disc {
+		list-style: disc outside;
+	}
 	ul ul li, ul ol li,
 	ol ol li, ol ul li { margin-bottom: 6px; }
-	li { line-height: 18px; margin-bottom: 12px; }
+	li { line-height: 18px; margin-bottom: 6px; }
 	ul.large li { line-height: 21px; }
 	li p { line-height: 21px; }
 
