--- a/_includes/css/base.css
+++ b/_includes/css/base.css
@@ -100,12 +100,14 @@
 ================================================== */
 	a, a:visited {
 		text-decoration: underline;
-		/* text-decoration: none; */
-		/* color: blue; */
 		outline: 0; 
 	}
-	a:hover, a:focus { }
-	p a, p a:visited { line-height: inherit; }
+	a:hover, a:focus {
+
+	}
+	p a, p a:visited {
+		line-height: inherit;
+	}
 
 
 /* #Lists
